--- a/Zipssa/app/src/main/res/layout/account_login_activity.xml
+++ b/Zipssa/app/src/main/res/layout/account_login_activity.xml
@@ -108,7 +108,7 @@
 		android:text="회원가입" />
 
 	<TextView
-		android:id="@+id/no_login_btn"
+		android:id="@+id/offline_btn"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:background="@drawable/account_gray_box"
