--- a/Zipssa/app/src/main/res/layout/account_contract_activity.xml
+++ b/Zipssa/app/src/main/res/layout/account_contract_activity.xml
@@ -37,6 +37,7 @@
 		android:orientation="vertical">
 
 		<CheckBox
+			android:id="@+id/contract_check"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:fontFamily="@font/lotte_dream_bold"
@@ -49,7 +50,7 @@
 			android:layout_height="0dp"
 			android:layout_weight="1"
 			android:background="@drawable/account_stroke_box"
-			android:layout_marginBottom="@dimen/join_contract_marginV">
+			android:layout_marginBottom="@dimen/join_contract_marginT">
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -57,6 +58,7 @@
 				android:orientation="vertical">
 
 				<TextView
+					android:id="@+id/contract_content"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:padding="@dimen/join_input_padding"
